added contact page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3679,6 +3679,7 @@ button.slick-arrow.slick-prev {
 // end favorites
 
 // start pricing
+
 .pricing {
   background-color: $bg;
   padding: 120px 0;
@@ -3851,4 +3852,154 @@ button.slick-arrow.slick-prev {
     background-color: #feb71d;
   }
 }
+
 // end pricing
+
+// start contact-page
+
+.contact-search {
+  height: 280px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .how-works__page {
+    margin-bottom: 0;
+    padding-top: 0;
+  }
+}
+
+.contact-page {
+  padding-top: 120px;
+  background-color: $bg;
+
+  .pros__top {
+    margin-bottom: 50px;
+  }
+
+  .pros__top-title {
+    span {
+      margin-left: 10px;
+    }
+  }
+}
+
+.contact-page__inner-info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+
+.contact__info-item {
+  max-width: 360px;
+  width: 100%;
+  height: 295px;
+  background-color: #fff;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  padding: 50px 0 40px;
+  text-align: center;
+}
+
+.contact__info-img {
+  color: $blue;
+  font-size: 48px;
+  margin-bottom: 35px;
+}
+
+.contact__info-title {
+  font-weight: 500;
+  font-size: 20px;
+  color: #000;
+  margin-bottom: 25px;
+}
+
+.contact__info-text {
+  max-width: 250px;
+  margin: 0 auto;
+  .contact__info-phone,
+  .contact__info-email {
+    font-size: 16px;
+    color: $text;
+    display: block;
+  }
+}
+
+.contact-page__inner-message {
+  background-color: #fff;
+  box-shadow: 0px 2px 4px 0px rgba(108, 111, 115, 0.1);
+  border-radius: 4px;
+  width: 100%;
+  text-align: center;
+  padding: 50px 0 60px;
+  margin-bottom: 120px;
+}
+
+.contact__message-title {
+  font-size: 24px;
+  color: #000;
+  border-bottom: 1px solid #e8ebf0;
+  padding: 0 30px 30px;
+  margin-bottom: 40px;
+}
+
+.contact__message-form {
+  max-width: 750px;
+  width: 100%;
+  margin: 0 auto;
+
+  textarea {
+    resize: none;
+    width: 100%;
+    height: 133px;
+    border: 1px solid #e8ebf0;
+    padding: 20px;
+    margin-bottom: 30px;
+    &::placeholder {
+      color: #9e9e9e;
+    }
+  }
+
+  button {
+    width: 170px;
+    height: 50px;
+    border: none;
+    background-color: $blue;
+    border-radius: 25px;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+  }
+}
+
+.contact__message-form__items {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 35px;
+  .contact__message-form__item {
+    max-width: 360px;
+    width: 100%;
+    input {
+      width: 100%;
+      height: 50px;
+      border: 1px solid #e8ebf0;
+      margin-bottom: 30px;
+      padding: 0 20px;
+      &::placeholder {
+        color: #9e9e9e;
+      }
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.contact-page__map {
+  background-color: #e3e6ec;
+  iframe {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+// end contact-page
