added blog page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3095,6 +3095,13 @@ button.slick-arrow.slick-prev {
   padding: 0 30px 70px;
 }
 
+.tab-item {
+  display: none;
+  &:first-child {
+    display: block;
+  }
+}
+
 .tab-items__content-item {
   margin-bottom: 50px;
   .tab-item__title {
@@ -4003,3 +4010,208 @@ button.slick-arrow.slick-prev {
 }
 
 // end contact-page
+
+// start blog
+
+.blog {
+  .blog__content-top {
+    padding: 26px;
+    border-bottom: 1px solid #ececec;
+  }
+
+  .product-one__content-item {
+    margin-bottom: 40px;
+  }
+
+  .blog__top-title {
+    font-size: 30px;
+    font-weight: 500;
+    color: $blue;
+    margin-bottom: 20px;
+  }
+
+  .blog__top-info {
+    display: flex;
+  }
+
+  .blog__top-info-item {
+    margin-right: 30px;
+    color: #898f96;
+    font-size: 15px;
+    .blog__author {
+      color: $blue;
+    }
+  }
+
+  .blog__item-author,
+  .blog__item-time,
+  .blog__item-comments,
+  .blog__item-views {
+    position: relative;
+    padding-left: 20px;
+    &::before {
+      content: '\f007';
+      font-family: 'icomoon';
+      position: absolute;
+      left: 0;
+    }
+  }
+
+  .blog__item-time {
+    &::before {
+      content: '\f017';
+    }
+  }
+  .blog__item-comments {
+    &::before {
+      content: '\f0e5';
+    }
+  }
+  .blog__item-views {
+    &::before {
+      content: '\f06e';
+    }
+  }
+
+  .blog__content-bottom {
+    padding: 25px;
+    padding-bottom: 40px;
+  }
+  .blog__content-text {
+    margin-bottom: 25px;
+  }
+
+  .blog__content-btn {
+    width: 140px;
+    height: 44px;
+    border-radius: 25px;
+    background-color: $blue;
+    color: #fff;
+    text-align: center;
+    line-height: 44px;
+  }
+
+  .blog__aside-item {
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    .blog__aside-title {
+      font-size: 20px;
+      color: #000;
+      padding: 24px;
+      border-bottom: 1px solid #e8ebf0;
+    }
+
+    .header__search {
+      margin-top: 0;
+      max-width: 310px;
+      width: 100%;
+      margin: 0 auto;
+      padding: 30px 0 40px;
+      button {
+        margin: 30px 0 40px;
+      }
+    }
+
+    .tabs {
+      margin-bottom: 22px;
+    }
+
+    .tabs .tab {
+      border-top: none;
+      font-size: 20px;
+      font-weight: 500;
+    }
+
+    .tabs .tab.active {
+      border-top: none;
+      border-bottom: 1px solid #e8ebf0;
+    }
+
+    .tabs .tab + .tab {
+      border-left: none;
+    }
+
+    .tab_content {
+      padding: 0 25px 25px;
+    }
+
+    .blog__tab-item {
+      display: flex;
+      border-bottom: 1px solid #e8ebf0;
+      padding-bottom: 10px;
+      margin-bottom: 18px;
+      &:last-child {
+        margin-bottom: 0;
+        border-bottom: none;
+      }
+      .blog__tab-item__img {
+        width: 70px;
+        height: 70px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        margin-right: 15px;
+      }
+
+      .tab-item__content-title {
+        font-weight: 500;
+        color: $header;
+        line-height: 24px;
+      }
+
+      .blog__item-time {
+        font-size: 15px;
+        color: #898f96;
+      }
+    }
+
+    .aside__item {
+      margin: 0;
+      width: 100%;
+      padding: 25px 25px 30px;
+      .category__list {
+        padding: 0;
+        font-size: 16px;
+      }
+    }
+
+    .blog__aside-inner {
+      padding: 30px 24px 28px;
+    }
+
+    .blog__aside-popular-item {
+      padding: 0 13px;
+      background-color: #edf5fe;
+      height: 30px;
+      border-radius: 15px;
+      margin-bottom: 12px;
+      font-size: 15px;
+      color: $blue;
+      font-weight: 500;
+      &.active {
+        background-color: $blue;
+        color: #fff;
+      }
+    }
+
+    .aside__banner {
+      max-width: 360px;
+      width: 100%;
+      height: 270px;
+      img {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+        overflow: hidden;
+        border-radius: 4px;
+      }
+    }
+  }
+
+  .pagination {
+    justify-content: flex-start;
+  }
+}
+// end blog
